created introduction page, moved content from index.org

--- a/index.org
+++ b/index.org
@@ -57,430 +57,9 @@ githubchart -u deerpig ./img/contrib.svg
 
 * Introduction
 
-The organization of encyclopedias is flat -- an encypledia is
-typically just a bunch of articles (JBOA) that are arranged
-alphabetically when physical printed and bound.
+* Index
 
-The Primer can also be seen as a JBOA, but also includes links between
-articles and between different block and inline content within
-articles.  In this respect it can be seen as a wiki like Wikipedia.
-
-However links in the Primer are layered into a stack:
-
-  - Thread Layer
-  - Reference Layer
-    - other articles
-    - external contents
-    - blobs
-    - authorities
-    - controlled vocabularies
-  - Relationship Layer
-  - Annotative Layer
-    - glossa
-    - scholia
-  - Version Layer
-
-** Composed vs. Generative Links
-** Rulesets
-** Duck Tests
-
-* Organization
-
- - topicspaces
- - blob tree
-
-* Maps vs Source
-
-This repo is the source code for the Primer -- when it is
-compiled, all of the rule sets and ducktests will be applied
-and cascade and generate an index which can be imported into
-a graph database, and formated articles in a variety of
-formats from plain text, html, LaTex (pdf) etc.
-
-* Navigating a Labryinth
-
-  - Ariadne's thread
-  - Hansel and Gretal's Breadcrumbs
-
-The primer can be thought of as a /threaded rhizomatic
-labyrinth/.  To the modern eye, even after being exposed
-(subjected:) to encyclopedia narratives such as Gravity's
-Rainbow, this is still difficult to get one's head around.
-
-#+begin_quote
-But he soon found to his dismay that the treatment of the
-chronicle material was singularly unlike wht he had see in
-the /Morte Arthure/.  Adventures were piled up one upon the
-other other without any apparent sequence or design, and
-innumerable personages, mostly anonymous, were introduced in
-a wild succession.  Every now and thenthey stopped to lay
-lance in rest and overthrow each other, and then swore
-eternal friendship and rode away.  The pupose of their
-encounters and pursuits was vague, and their tasks were
-seldom fulfilled: they met and parted and met again, each
-intent at first on following his particular 'quest', and yet
-prepared at any time to be diverted from it to other
-adventures and undertakings.  As a result, 'the basic
-thought became subsidiary, the episode increasingly
-prominent, the showing of the action defeated any attempt to
-reach an end and the story lost all purpose.' In these words
-Gustav Gröber described three-quarters of a century ago the
-methods used by medieval prose writers.  But there is reason
-to believe that at a much earlier date their methods were
-condemned on similar grounds, and the often quoted remark of
-the Canon of Toledo in /Don Quixote/ remains to this day the
-most characteristic epression of the modern view: 'I have
-never yet,' he says, 'seen in a book of chivalry complete in
-all its parts, so that the middle agrees with the beginning
-and the end with the beginning and the middle; but they seem
-to construct heir stories with such a multitude of members
-as though they meant to produce a monster rather than a
-well-proportioned figure.'
-
-The real question is, however, whether neglect of
-/structure/ in the modern sense of the term neccessarily
-implies that absence of a /method of composition/. Gröber may
-have blamed the cycle works for their lack of a
-/Grundgedanke/, Cervantes may have thought them 'monsterous'
-because they formed no consistent whole; but it remains to
-be seen whether the criteria of a /Grundgedanke/ or of a
-'well-proportioned figure' are not in this case misleading,
-and weather behind the apparent deformity and incoherence of
-the prose romances there is not to be found an architectual
-design so unlike our own conception of a story that we
-inevitably fail to percieve it.  One /a priori/ reason for
-suspecting the existence of such a design is that if each
-branch of the Cycle were a mere collection of episodes
-haphazzardly put together, the Cycle would naturally fall
-into as many independent sections.  In reality, the reverse
-is the case; none of the branches of the Cycle can be
-conveniently subdivided, and no subdivisions exist in the
-manuscripts.  Apart from certain interpolations which can
-easily be detached from the main body of the work, few of
-the episodes if any, appear as self-contained units. 'Aucune
-aventure', writes Ferdinand Lot, 'ne forme un tout se
-suffisant à lui-même.  D'une part, des èpisodes antérieurs,
-laissés provisoirement de côté, y prolongent des
-ramifications' d'autre part, des épisodes sebséquents,
-proches ou lointains, y sont ameorcés'[1]  Judged by our
-standards this would seem to be a strange paradox.  On the
-one hand, the prose romances are admittedly, the very
-negation of the classical principle of composition: the
-beginning does not 'agree' with the middle, nor the middle
-with the end; on the other, they seem to obey the age-long
-rule that no part can be removed without effecting the
-whole.  There must, then be something which binds them
-together, invisible though it is to the modern eye: some
-peculiar device which, while making the various parts of the
-Cycle inseparable from one another, fails to weld them into
-an harmonious whole.
-
-Perhaps the easiest way to discover the nature and the
-working of this device is to draw an analogy with the
-technique of tapestry.  Just as in a tapestry each thread
-alternates with an endless variety of others, so in the
-early prose romances of the Arthurian group numerous
-seemingly indepdendent episodes or 'motifs' are interwoven
-in a matter which makes it impossible for each episode to be
-set aside at any moment and resumed later.  No single
-stretch of such a narrative can be complete in itself any
-more than a stitch of such a narrative can be complete in
-itself a woven fabric; the sequel may appear at any moment,
-however long the interval.  But the resemblance goes
-further, for unlike the finished tapestry, a branch of prose
-romance has as a rule no natural conclusion; when the author
-brings it to a close he simply cuts the threads at
-arbitrarily chosen points, and anyone who chooses to pick
-them up and interweave them in a simular fashion cancontine
-the work indefinitely. Hence the 'multitude of members' and
-the prodigious growth of the Arthurian tradition enlarged at
-each stage of its progress by continuations of earlier works.
-
--- v1.pg lxiv-lxvii.
-
-Perhaps the most obvious difference between Old French epic
-romance and romance is that the latter, not content to
-/narrate/ events, endevours to /interpret/ them.  That this
-procedure should have been adopted in a what was essentially
-'learned' type of work -- and French courtly romance was
-primarily /un genre savant/ -- is not unnatural, but what
-made it inevitable was the intellectual background of
-courtly poets.  The search for unexpressed meaning was
-perhaps the principle feature of twelfth-century thought,
-almost equally noticeable in all spheres of learning.  It
-may have been considered by some a waste of time to indulge
-in such subleties as the attempt to find in the statement
-that Hyllus was the sone of Hercules the inner meaning that
-a valid argument comes from a bold and vigorous disputant,
-or in the five vowels the five pleas ofthe crown, the names
-of which happened each to have a different vowel in the
-second syllable; interpretation remained none the less the
-most widely recognized intellectual persuit.  Excellent
-practice in it was provided by /grammatica/, the first
-member of the Trivium, which had pride of place in the
-schools of Gaul from the seventh century to the eleventh and
-reigned supreme in the heyday of the school of Chartes, from
-1050 to 1150.  According to the classical definition
-formulated by Donatus (/scientia interpretandi poetas atque
-historicos et recte scribendi loquendique ratio/), repeated
-almost word for word in the ninth century by Maurus, and
-amplified by John o Salisbury in the twelth, /grammatica/
-was primarily concerned with the elucidation of authors; the
-proper use of language, both spoken and written, was a means
-to this end.  John of Salisbury's famous chapter /De usu
-legendi et prelegendi/ shows how the subject was taught.
-Pupils were encouraged above all to develop and pefect the
-crude substance (/rudem materiam/) of a story or an argument
-'with such abundance of learning and such elegance of
-composition an ornament that the work, brought to the
-highest perfection, seemed as it were the image of all
-arts.  The practice pf /grammetica, dulcis secretorum
-comes/, thus instilled in the pupils' minds what few, if any
-French epic poets possessed; the habit of expouding and
-elaborating a narrative discourse, of bringing out its
-significance, and so giving it new weight and attraction.
-This was at firt a habit of mind; but it soon become a habit
-of conception, equally prominent in religious and secular
-writings.  The 'otherworldliness' of medieval preaching was
-not an attitude of indifference to physical facts, but a
-call to see through them: in St. Bernard's words, to
-concieve of the visable world as 'full of supernal
-mysteries, abounding each in its special sweetness, if the
-eye that beholds be but attentive'; and in the opening lines
-of a simular benifit was held out to readers of any 'simple'
-story:
-
-   Servants of God, listen to the story: it is very simple
-   and seems unadorned, but it is full of meaning (sens) and
-   matter. The story is chaff, the meaning wheat; the
-   meaning is the fruit, the story the branch.  This book is
-   a chest in which are locked the hidden things of God.
-
-Applied to narrative poetry, this attitude of mind produced
-at first a strangely inflated form of explanatory digression
-such as is found in the early /romans d'antiquité/: Ovid's
-story of Pyramus and Thisbe became in its twelth-century
-French adaptation a series of redundent soliloquies; and in
-the French /Roman de Troie/ Achilles, the silent lover or
-Polyxena, was made to describe at unnecessarily great length
-the devestating effects of his passion.  But less then two
-decades later, in the romances of Chrétien of Troyes, the
-same method led to some truly remarkable results: in he
-recording of their reactions to each important turn f events
-the characters Chrétien's stories were able to display a
-subtley of thought and feeling far beyond and earlier
-attempts at characterization.  The 'hidden things', once
-skillfully revealed, ceased to be a mere subject of school
-exercises; they became a vital element of a new form of
-narrative art.
-
-But it is doubtful whether the literary genre thus created
-would have prospered as it did if it had not inherited at an
-early stage another feature of contemporary learning.  If
-/grammatica/ can be said to have shown how a given set of
-incidents could be explained and expanded, /rhetorica/, the
-second part of the Trivium, taught poets and story-tellers
-the proper use of imagination.  The discipline which in the
-later Middle-Ages was to be largely reduced to a mere
-stylistic ornamentation had not at that time lost its
-original composing function.  In a number of important works
-embodying the doctrine of the rhetoricians from by
-Quintilian onwards the term /colores rhetoricae/ refers, as
-in Cicero, not so much to formal elaboration as to the
-'treatment of the matter' from the speaker's or writer's
-point of view.  There is a signiificant agreement in this
-respect between Quintilian and the three great medieval
-scholars closely connected with the Gallic tradition of
-rhetoric: Sidonius Apollinaris, Martianus Capella and John
-of Salisbury. Sidonius Apollinaris insists on the use of
-'colours' because they 'provide boys' themese with pieces to
-weave in' and enable the orator to display his talent
-despite the meagerbess of his case.  Martianus Capella in
-his allegorical description of the seven arts speaks of
-rhetoric as /rerum omnium regina/ who has shown 'the power
-to move men whither she pleases, or whence, to bow them to
-tears, to incite them to rage, to transform the mien and
-feeling.  And John of Salisbury goes so far as to attribute
-to rhetoric the function normally assumed by /dialectica/:
-he uses the term /probani colores/ in the sense of
-'amplification of proof', and like his redecessors looks to
-rhetoric for means of persausion.  Rhetoric provided
-prospective romance writers with three main types of
-exercice.  First they were shown how to paraphrase some
-speeches in the /Aeniad/ (/loci Vergliani/); next came the
-/dictiones ethicae/, or solilioquies with which persons in
-history or mythology could be credited on certain
-occasions.  The third and most advanced stage of rhetorical
-training was reached in the /controversiae/, or
-disquistitions on general subjects, of which  there are many
-strikig examples in the letters of Sidonius Apollinaris.
-All this was, of course, originally intended for use in
-discourses, not in works of fiction, but in the common
-confusion between the notion of /narratio/ ('statement of
-facts in a discourse') and 'narrative', which can be traced
-as far back as Quintilian, helped to transfer to
-imagainative literature what was in reality a method of
-declamation, and the process was further facilitated by the
-fact that, as some passages of Sidonius clearly suggest,
-/declamatio/ was itself treated as a literary form alongside
-the /epos tragoediarum/, the /comoedia/, and the /satira/.
-Nothing seems more natural therefore, thanthat rhetorical
-devices should have been used for purposes of orginal
-composition.  And so, after having been trained by the
-grammarians to react to an articulate manner to works of
-Latin antiquety, romance writers were able to aquire from
-the rhetoricians the habit of expressing through a /fabula/
-or /historia/ a point of view of their own.
-
-This habit more than any other single factor helped to shape
-courtly romance.  Whatever the subject of the narrative, its
-function as conceived by the twelfth- and thirteenth-century
-poets is to serve as an expression of a certain type view of
-life which we usually describe as 'courtly' to translate in
-terms of actions and characters certain subtle varieties of
-ssentiment and highly sophisticated code of behaviour.  A
-romance might recall the legendary exploits of King Arthur's
-knights, or some imaginary event at the court of Byzantium,
-or again some episode placed in contemporary French setting;
-what it primarily endevours to do it not to give an
-impression of life in the lands and the times to which it
-subject-matter ostensibly belongs, but to use this
-subject-matter as a means of conveying a coherent system of
-ideas. 
-
-pg lxxiv-lxxix
-
-/The Works of Sir Thomas Malory/. Ed. Vinaver, Eugène
-(1967). 2nd ed. 3 vol. Oxford: Clarendon Press. [[https://en.wikipedia.org/wiki/Special:BookSources/0198118384][ISBN 0-19-811838-4]].
-
-:SEE: [[https://en.wikipedia.org/wiki/Le_Morte_d%27Arthur][Le Morte d'Arthur]] | Wikipedia
-
-[[https://en.wikipedia.org/wiki/Gustav_Gr%C3%B6ber][Gustav Gröber]]     | Wikipedia
-[[https://en.wikipedia.org/wiki/Eug%C3%A8ne_Vinaver][Eugène Vinaver]]    | Wikipedia
-[[https://en.wikipedia.org/wiki/John_of_Salisbury][John of Salisbury]] | Wikipedia
-
-[1] Does not form a whole sufficient to itself. On the one
-hand, earlier episodes, temporarily left aside, prolong
-desramifications, and on the other hand, sequent episodes,
-close or distant, are brought to light
-#+end_quote
-
-
-that is a /paedia/ of
-  descriptive and prescriptive topics which are made up of a
-  narratives, rulesets and media
-
-, authorities and library
-
-
-* Primer (Primarium)
-** Introduction
-
-The Primer is the place where you go after you have completed the
-Quadrivium.  It is actually a collection of scopes, a Primer of
-Primers, not a single work.  The primer is the gateway to /everything/
-that isn't in the quadrivium.  It is a /primer/, in the original sense
-of the word, a place to get the minimum needed to start -- other more
-detailed specialized scopes will branch from each subject....
-
-There should always be three parts to each -- theory, application and
-proscription.
-
-The Primer will eventually include everything needed to build and
-maintain a self-sustaining technologically advanced complex society
--- in microcosm -- for communities not larger than 50K in population
-and not smaller than 500.  Below that threshold there won't be enough
-people to specialize in living memory and the community will have to
-fall back to a lower level of complexity...
-
-** Organization
-*** Liberal Arts
-- Formal Sciences
-  - Mathematics     ::  
-  - Statistics
-  - Logic           :: 
-  - Systems         :: systems science
-  - Information  
-- Natural Sciences
-  - Physics
-  - Chemistry
-  - Biology
-  - Astronomy       :: space sciences
-- Earth Sciences
-  - Geology         :: tectonics, earthquakes, vulcanism
-- ?????
-  - History         :: 
-  - Mythology       :: includes, cults and theistic belief systems
-  - Linguistics     :: 
-  - Philosophy      :: 
-  - Literature      :: 
-- Anthropology      :: 
-*** Applied Arts
-- Biological
-  - Medicine      :: all existing sub-disciplines
-  - Pharma        ::
-  - Agriculture   :: animal husbandry, crops, forestry
-- Information
-  - Computing     :: programing, processing & storage
-  - Electronics   :: integrated circuits, display, input
-  - Electrics     :: generation, storage, transmission, motors
-  - Network       :: communications, data transmission
-- Energy
-  - Chemical      :: combustion, petrochemical, natural gas, biofuels
-  - Nuclear       :: fission, fusion
-  - Biological    :: electro chemical eg. solar, photosynthesis 
-- Earth Sciences
-  - Meterology    :: climate, weather, biosphere
-  - Ecology       :: pollution, conservation, 
-  - Geology       :: earthquakes, vulcanism
-- Materials
-  - Mining        :: mineral & element extraction
-  - Mineral       :: stone, cement
-  - Organic       :: woods, grasses
-  - Ceramics      :: ceramics & glass
-  - Composites    ::
-  - Polymers      ::
-  - Metal alloys  :: 
-  - Chemical      :: Paints, Adhesives, Compounds
-  - Optics        :: glassware, lenses, fiber optics
-- Social
-  - Civil         :: city planning, architecture, civil engineering
-  - Governance    :: organization, political systems, law, services
-  - Economics     :: currency, transactions, markets
-  - Philosophy    :: ethics, philosophical systems
-  - Cognition     ::
-  - Sociology     ::
-  - Psychology    ::
-- Space Sciences
-  - Physics       :: experimental, applied
-  - Astronomy     :: observatories, imaging, 
-  - Geography     :: cartography, hydrology, satellite imaging
-- Tools
-  - Handtools     :: muscle, electrical, pneumatic 
-  - Machines      :: industrial, domestic appliance
-  - Robotics      :: computer controlled, general purpose machines
-- Transporation
-  - Aviation      :: planes, helicopters, balloons, avionics 
-  - Maritime      :: boats, navigation, propulsion
-  - Space         :: rockets, space elevator, satellites, probes
-  - Ground        :: wheel, tread, ped
-- Paleontology
-- Archaeology
-- Education
-- Engineering
-- Military
-*** Fine Arts
-- Music
-- Art
-- Dance
-*** Proscribed Arts
-- Designs         :: plans, cad files, etc.
-- Standards       :: 
-- Best Practices  :: 
-- Protocols       :: tcp
-- Encodings       :: ascii, unicode, binary
-- Proscriptions   :: general techniques and skills 
-- Proceedures     :: recipes, checklists, proceedures
-- Patterns        :: pattern languages
+ - [[./prim-introduction.org][Introduction]]
+ - [[./prim-naming-conventions.org][Naming Conventions]] 
 
 
