--- a/prim-introduction.org
+++ b/prim-introduction.org
@@ -68,6 +68,22 @@ first canonical hour. LL. primae liber. See Prime, n., 4.]
 -- The Collaborative International Dictionary of English v.0.48 [gcide]:
 #+end_quote
 
+#+begin_quote
+*Primer* (pri mer, pre mer), /mid dot upside down e,r'/
+ /sb/.^1 Late M.E. [-- AFr. /primer -- med.L. /primarius/
+ (sc. /liber/ book), /primarium/ (sc. /manuale/ manual),
+ subst uses masc. and n. of L. /primarius/ PRIMARY. see
+ -ER^2 2,]
+
+2. An elementary-school-book for teaching children to
+   read. Lare ME. b. Hence, a small introductory book on any
+   subject 1807. c. /fig/ That which serves as a first means
+   of instruction 1640.
+
+-- The Shorter Oxford English Dictionary, 1973
+#+end_quote
+
+
 I've personally always thought of a primer in this sense, as a
 simplified introduction to a subject for people with no prior
 experience, knowledge or (and this is important) pre-disposition to,
@@ -92,7 +108,7 @@ dieties even when the founding members of their cults thought
 otherwise... Nor is this a primer for the establishment of any
 specific civilization, which would be, as Buckminster Fuller
 understood, would just be parroting back the same things that got us
-into trouble in the fist place. 
+into trouble in the fist place. *REF NEEDED*
 
 #+begin_verse
 There's nothing in the streets
