--- a/prim-introduction.org
+++ b/prim-introduction.org
@@ -52,7 +52,7 @@ The latest version of this document is: src_sh[:results value]{git describe --ab
 Primer \Prim"er\, n. [Originally, the book read at prime, the
 first canonical hour. LL. primae liber. See Prime, n., 4.]
 
-   2. A small elementary book for teaching children to read; a
+  *2.* A small elementary book for teaching children to read; a
       reading or spelling book for a beginner.
       [1913 Webster]
 
@@ -70,13 +70,12 @@ time as any to undertake long journeys with a full belly, a
 light step and dry socks.
 
 #+begin_quote
-*Primer* (pri mer, pre mer), /mid dot upside down e,r'/
- /sb/.^1 Late M.E. [-- AFr. /primer -- med.L. /primarius/
- (sc. /liber/ book), /primarium/ (sc. /manuale/ manual),
- subst uses masc. and n. of L. /primarius/ PRIMARY. see
- -ER^2 2,]
+*Primer* (pri·məɹ, prəi·məɹ), /sb/.^1 Late M.E. [--
+ AFr. /primer -- med.L. /primarius/ (sc. /liber/ book),
+ /primarium/ (sc. /manuale/ manual), subst uses masc. and
+ n. of L. /primarius/ PRIMARY. see -ER^2 2,]
 
-2. An elementary-school-book for teaching children to
+*2.* An elementary-school-book for teaching children to
    read. Lare ME. b. Hence, a small introductory book on any
    subject 1807. c. /fig/ That which serves as a first means
    of instruction 1640.
