--- a/index.org
+++ b/index.org
@@ -79,3 +79,4 @@ Turtles all the way down indeed....
  - [[./prim-naming-conventions.org][Naming Conventions]] 
 
 
+ - [[./prim-strategies.org][Strategies for a Distributed Civilization]] 
