adding more to the introduction

--- a/prim-strategies.org
+++ b/prim-strategies.org
@@ -89,4 +89,58 @@ catagorize each other as either belonging to your group -- one of us
 believe that anyone who is not one of us, is not just different, and
 not even an enemy, but evil or not even human and not deserving of
 being treated even as well as an animal.  This is how we rationalize
-slavery, racism, sexism and  xenophobia.  
+slavery, racism, sexism and  xenophobia.
+
+Universities emerged from the monastic tradition, and continued many
+traditions and even titles from european monastaries even today.
+Titles like rector, xxxxxxx xxxxxxxx xxxxxxx echo the universities
+monastic ancestry.
+
+Universities have often been thought of as /others/ in their
+neighboring communities.  The /Town-Gown/ rivalry is as old as
+Universities themselves.  The /Latin Quarter/ in Paris, a part of the
+city which became the proto-model for the modern university before
+they were granted their own land to create campuses had any number of
+problems with the rest of the city.  Teachers were granted special
+legal status, teachers and students spoke /latin/, which before then
+had only been spoken by the clergy, and only heard by commoners during
+mass.  No one could read, write or speak latin unless you joined the
+church or went to school.  That set them apart.  Because educated
+people are /educated/, they sometimes tend to dispense with many
+common social customs, and superstitions.  That set them apart.  They
+even dressed strangely, in gowns (robes) which definately set them
+apart.
+
+It's no surprise that whenever populism or a populist movement is on
+the rise, there is a backlash against the educated and especially
+against educational institutions.  Time and time again, Univeristies
+have been the place where it is thought where uprisings are incubated
+and civil unrest instigated.  Purges and even wholesale slaughter of
+people in Universities are a far too common occurance throughout
+history.  I am writing this in an office of a Univeristy that had all
+but two of it's PhDs murdered in my lifetime.  Turkey is the most
+recent place to see mass arrests across the country.  The Americans
+haven't yet commited broadscale universicide but events like the Kent
+State Masacre and before that the darkness of the McCarthy era witch
+hunts show that they are not the exception to the rule.
+
+People fear the /other/, so if we are trying to provide very long term
+safeguards against our own darker natures the monastic, temple or
+university model has almost as many things going for it as it does
+against it.
+
+Even if we put aside these misgivings about monastic models, if our
+goal is to preserve and safeguard civilization it will always be a
+/descriptive/ record.  Knowledge is not just what is in a book, it's
+information that has been woven into a person's brain -- knowledge is
+always a living thing.  Recorded knowledge, once it has passed out of
+living memory is in a sense, lost.  It has to be reinvented in your
+head and in your hands from the pages of a book -- weaving that
+information into your brain through constant reinforcement and practice.
+
+If you have to choose between rebooting a collapsed civilization from
+a neighboring civilization or from a library of books that have been
+unearthed after the collapse that recorded what has been lost,
+rebooting from the neighbor is a far better option.
+
+
